<resources>
    <string name="app_name">Version1</string>
    <string name="description">Расчет расхода топлива автомобиля по введенным данным</string>
    <string name="enterCityContribution">Расход на 100 км в городе (литров)</string>
    <string name="enterHighwayContribution">Расход на 100 км по трассе (литров)</string>
    <string name="cityDistance">Примерное пройденное расстояние в городе (километры)</string>
    <string name="highwayDistance">Примерное пройденное расстояние по трассе (километры)</string>
    <string name="count">РАСЧИТАТЬ</string>
    <string name="autoFill">0</string>
    <string name="fuelCalculator">Fuel Calculator</string>
    <string name="yourValuesString">Ввод данных вручную</string>
    <string name="databaseValuesString">Расчет по имеющимся данным</string>

    <color name="black">#555555</color>
    <color name="white">#FFFFFF</color>

</resources>
