<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/black"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuelCalculator"
            android:textSize="20pt"
            android:textColor="@color/white"
            android:layout_marginBottom="80dp"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/yourValuesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourValuesString" />

            <Button
                android:id="@+id/databaseValuesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/databaseValuesString" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>